log

Fri Mar 11 19:40:44 HSP 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|6
total_score: 10/70
0ef967e
Fri Mar 11 20:03:52 HSP 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
cb6e569
Fri Mar 11 20:20:26 HSP 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:61:13: error: unused variable 'newperson' [-Werror=unused-variable]
    Persona *newperson;
             ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b9a3f4e
Fri Mar 11 20:34:56 HSP 2022: 
 exercises.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:67:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
    edad = newperson->rut ;
         ^
cc1.exe: all warnings being treated as errors
Compilation failed
185eed7
Fri Mar 11 20:36:10 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
3f384c4
Fri Mar 11 20:48:15 HSP 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:87:30: error: return makes pointer from integer without a cast [-Werror=int-conversion]
    if(vector == NULL) return EXIT_FAILURE;
                              ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1d7d53f
Fri Mar 11 20:48:52 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
2d83114
Fri Mar 11 20:49:34 HSP 2022: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
4e52a49
Fri Mar 11 20:59:24 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:86:39: error: passing argument 1 of 'realloc' makes pointer from integer without a cast [-Werror=int-conversion]
    Vector *hola = (Vector *) realloc (n,sizeof(Vector));
                                       ^
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:486:40: note: expected 'void *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  void *realloc (void *, size_t);
                                        ^~~~~~~
In file included from test.c:5:0:
exercises.c:87:13: error: invalid operands to binary == (have 'Vector {aka struct <anonymous>}' and 'void *')
    if(*hola == NULL) exit(1);
       ~~~~~ ^~
cc1.exe: all warnings being treated as errors
Compilation failed
a38060c
Fri Mar 11 20:59:53 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:86:30: error: too many arguments to function 'malloc'
    Vector *hola = (Vector *) malloc (n,sizeof(Vector));
                              ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:485:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *malloc (size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
In file included from test.c:5:0:
exercises.c:87:13: error: invalid operands to binary == (have 'Vector {aka struct <anonymous>}' and 'void *')
    if(*hola == NULL) exit(1);
       ~~~~~ ^~
Compilation failed
f03c45c
Fri Mar 11 21:01:45 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:86:39: error: passing argument 1 of 'realloc' makes pointer from integer without a cast [-Werror=int-conversion]
    Vector *hola = (Vector *) realloc (n,sizeof(Vector));
                                       ^
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:486:40: note: expected 'void *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  void *realloc (void *, size_t);
                                        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
f2120de
Fri Mar 11 21:02:08 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
087b4d3
Fri Mar 11 21:06:37 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
7a2848c
